[gd_scene load_steps=5 format=3 uid="uid://csn6cbnfcpaj7"]

[ext_resource type="Script" path="res://scenes/item/_baseItem.gd" id="1_cgcb3"]
[ext_resource type="AnimationLibrary" uid="uid://b01dlote4c80f" path="res://resources/anims/item/anim__lib_item.res" id="2_us8bg"]

[sub_resource type="Animation" id="Animation_dnf52"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7lphw"]
_data = {
"RESET": SubResource("Animation_dnf52")
}

[node name="_baseItem" type="Area2D" groups=["Item"]]
collision_layer = 4
script = ExtResource("1_cgcb3")

[node name="SpriteContainer" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7lphw"),
"item": ExtResource("2_us8bg")
}
autoplay = "item/idle"

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
